# SlicerShapeSegmentation

./: CMakeLists.txt  LICENSE  README.md  segmentation.cpp
Segmenter/: CMakeLists.txt  Segmenter.cxx  Segmenter.xml
Segmenter/Data/Input/: Hand.vtk
data/: Hand.vtk
